--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,15 @@
       {
         "image-alt": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "width: fit-content",
+          "backdrop-filter"
+        ]
+      }
     ]
   }
 }
